# interactive-demo

./: .gitignore  .pre-commit-config.yaml  00_understanding-data.ipynb  01_inspect-raw-samples.ipynb  02_event-detection.ipynb  03_public-datasets.ipynb  10_plotting.ipynb  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml
